--- a/程序/Sql/sql查询表中是否存在符合条件的记录/index.html
+++ b/程序/Sql/sql查询表中是否存在符合条件的记录/index.html
@@ -19,7 +19,7 @@
     <meta name="description" content="判断记录是否存在，最主要的问题就是性能问题 话不多说，直接上结果 12-- 存在返回 1, 不存在返回 0select ifnull((select 1 from tableName where conditions limit 1 ), 0)﻿ as existed  ifnull 函数：如果第一个参数值为null，返回第二个参数的值，如果不为 null 则返回第一个参数的值 错误示范： 1se">
 <meta property="og:type" content="article">
 <meta property="og:title" content="SQL查询表中是否存在符合条件的记录">
-<meta property="og:url" content="http://example.com/%E7%A8%8B%E5%BA%8F/Sql/sql%E6%9F%A5%E8%AF%A2%E8%A1%A8%E4%B8%AD%E6%98%AF%E5%90%A6%E5%AD%98%E5%9C%A8%E7%AC%A6%E5%90%88%E6%9D%A1%E4%BB%B6%E7%9A%84%E8%AE%B0%E5%BD%95/index.html">
+<meta property="og:url" content="https://maoxianck.github.io/%E7%A8%8B%E5%BA%8F/Sql/sql%E6%9F%A5%E8%AF%A2%E8%A1%A8%E4%B8%AD%E6%98%AF%E5%90%A6%E5%AD%98%E5%9C%A8%E7%AC%A6%E5%90%88%E6%9D%A1%E4%BB%B6%E7%9A%84%E8%AE%B0%E5%BD%95/index.html">
 <meta property="og:site_name" content="毛线球上的喵星人">
 <meta property="og:description" content="判断记录是否存在，最主要的问题就是性能问题 话不多说，直接上结果 12-- 存在返回 1, 不存在返回 0select ifnull((select 1 from tableName where conditions limit 1 ), 0)﻿ as existed  ifnull 函数：如果第一个参数值为null，返回第二个参数的值，如果不为 null 则返回第一个参数的值 错误示范： 1se">
 <meta property="og:locale" content="zh_CN">
@@ -71,7 +71,7 @@
   <script id="fluid-configs">
     var Fluid = window.Fluid || {};
     Fluid.ctx = Object.assign({}, Fluid.ctx)
-    var CONFIG = {"hostname":"example.com","root":"/","version":"1.9.4","typing":{"enable":true,"typeSpeed":80,"cursorChar":"_","loop":false,"scope":[]},"anchorjs":{"enable":true,"element":"h1,h2,h3,h4,h5,h6","placement":"left","visible":"hover","icon":""},"progressbar":{"enable":true,"height_px":3,"color":"#29d","options":{"showSpinner":false,"trickleSpeed":100}},"code_language":{"enable":true,"default":"TEXT"},"copy_btn":true,"image_caption":{"enable":true},"image_zoom":{"enable":true,"img_url_replace":["",""]},"toc":{"enable":true,"placement":"right","headingSelector":"h1,h2,h3,h4,h5,h6","collapseDepth":0},"lazyload":{"enable":true,"loading_img":"/img/loading.gif","onlypost":false,"offset_factor":2},"web_analytics":{"enable":false,"follow_dnt":true,"baidu":null,"google":null,"gtag":null,"tencent":{"sid":null,"cid":null},"woyaola":null,"cnzz":null,"leancloud":{"app_id":null,"app_key":null,"server_url":null,"path":"window.location.pathname","ignore_local":false}},"search_path":"/local-search.xml"};
+    var CONFIG = {"hostname":"maoxianck.github.io","root":"/","version":"1.9.4","typing":{"enable":true,"typeSpeed":80,"cursorChar":"_","loop":false,"scope":[]},"anchorjs":{"enable":true,"element":"h1,h2,h3,h4,h5,h6","placement":"left","visible":"hover","icon":""},"progressbar":{"enable":true,"height_px":3,"color":"#29d","options":{"showSpinner":false,"trickleSpeed":100}},"code_language":{"enable":true,"default":"TEXT"},"copy_btn":true,"image_caption":{"enable":true},"image_zoom":{"enable":true,"img_url_replace":["",""]},"toc":{"enable":true,"placement":"right","headingSelector":"h1,h2,h3,h4,h5,h6","collapseDepth":0},"lazyload":{"enable":true,"loading_img":"/img/loading.gif","onlypost":false,"offset_factor":2},"web_analytics":{"enable":false,"follow_dnt":true,"baidu":null,"google":null,"gtag":null,"tencent":{"sid":null,"cid":null},"woyaola":null,"cnzz":null,"leancloud":{"app_id":null,"app_key":null,"server_url":null,"path":"window.location.pathname","ignore_local":false}},"search_path":"/local-search.xml"};
 
     if (CONFIG.web_analytics.follow_dnt) {
       var dntVal = navigator.doNotTrack || window.doNotTrack || navigator.msDoNotTrack;
@@ -342,7 +342,7 @@
   <div class="license-box my-3">
     <div class="license-title">
       <div>SQL查询表中是否存在符合条件的记录</div>
-      <div>http://example.com/程序/Sql/sql查询表中是否存在符合条件的记录/</div>
+      <div>https://maoxianck.github.io/程序/Sql/sql查询表中是否存在符合条件的记录/</div>
     </div>
     <div class="license-meta">
       
