--- a/算法相关/编码算法/index.html
+++ b/算法相关/编码算法/index.html
@@ -19,7 +19,7 @@
     <meta name="description" content="前言严格来说，编码并不算在信息安全里，只是将信息使用另一个形式进行传输或者是表面上的不可阅读而已。 算法Base64网上说的最多的就是Base64。“用Base64加密一下“，这种说法是不严谨的，因为它只能够实现肉眼上的不可读。Base64算法是一种编码算法，将二进制数据使用64个ASKII字符表达，主要用于解决二进制数据在不同端的不兼容问题。一些特殊的二进制流在不同的设备、系统中可能表示的意义不">
 <meta property="og:type" content="article">
 <meta property="og:title" content="编码算法">
-<meta property="og:url" content="http://example.com/%E7%AE%97%E6%B3%95%E7%9B%B8%E5%85%B3/%E7%BC%96%E7%A0%81%E7%AE%97%E6%B3%95/index.html">
+<meta property="og:url" content="https://maoxianck.github.io/%E7%AE%97%E6%B3%95%E7%9B%B8%E5%85%B3/%E7%BC%96%E7%A0%81%E7%AE%97%E6%B3%95/index.html">
 <meta property="og:site_name" content="毛线球上的喵星人">
 <meta property="og:description" content="前言严格来说，编码并不算在信息安全里，只是将信息使用另一个形式进行传输或者是表面上的不可阅读而已。 算法Base64网上说的最多的就是Base64。“用Base64加密一下“，这种说法是不严谨的，因为它只能够实现肉眼上的不可读。Base64算法是一种编码算法，将二进制数据使用64个ASKII字符表达，主要用于解决二进制数据在不同端的不兼容问题。一些特殊的二进制流在不同的设备、系统中可能表示的意义不">
 <meta property="og:locale" content="zh_CN">
@@ -71,7 +71,7 @@
   <script id="fluid-configs">
     var Fluid = window.Fluid || {};
     Fluid.ctx = Object.assign({}, Fluid.ctx)
-    var CONFIG = {"hostname":"example.com","root":"/","version":"1.9.4","typing":{"enable":true,"typeSpeed":80,"cursorChar":"_","loop":false,"scope":[]},"anchorjs":{"enable":true,"element":"h1,h2,h3,h4,h5,h6","placement":"left","visible":"hover","icon":""},"progressbar":{"enable":true,"height_px":3,"color":"#29d","options":{"showSpinner":false,"trickleSpeed":100}},"code_language":{"enable":true,"default":"TEXT"},"copy_btn":true,"image_caption":{"enable":true},"image_zoom":{"enable":true,"img_url_replace":["",""]},"toc":{"enable":true,"placement":"right","headingSelector":"h1,h2,h3,h4,h5,h6","collapseDepth":0},"lazyload":{"enable":true,"loading_img":"/img/loading.gif","onlypost":false,"offset_factor":2},"web_analytics":{"enable":false,"follow_dnt":true,"baidu":null,"google":null,"gtag":null,"tencent":{"sid":null,"cid":null},"woyaola":null,"cnzz":null,"leancloud":{"app_id":null,"app_key":null,"server_url":null,"path":"window.location.pathname","ignore_local":false}},"search_path":"/local-search.xml"};
+    var CONFIG = {"hostname":"maoxianck.github.io","root":"/","version":"1.9.4","typing":{"enable":true,"typeSpeed":80,"cursorChar":"_","loop":false,"scope":[]},"anchorjs":{"enable":true,"element":"h1,h2,h3,h4,h5,h6","placement":"left","visible":"hover","icon":""},"progressbar":{"enable":true,"height_px":3,"color":"#29d","options":{"showSpinner":false,"trickleSpeed":100}},"code_language":{"enable":true,"default":"TEXT"},"copy_btn":true,"image_caption":{"enable":true},"image_zoom":{"enable":true,"img_url_replace":["",""]},"toc":{"enable":true,"placement":"right","headingSelector":"h1,h2,h3,h4,h5,h6","collapseDepth":0},"lazyload":{"enable":true,"loading_img":"/img/loading.gif","onlypost":false,"offset_factor":2},"web_analytics":{"enable":false,"follow_dnt":true,"baidu":null,"google":null,"gtag":null,"tencent":{"sid":null,"cid":null},"woyaola":null,"cnzz":null,"leancloud":{"app_id":null,"app_key":null,"server_url":null,"path":"window.location.pathname","ignore_local":false}},"search_path":"/local-search.xml"};
 
     if (CONFIG.web_analytics.follow_dnt) {
       var dntVal = navigator.doNotTrack || window.doNotTrack || navigator.msDoNotTrack;
@@ -613,7 +613,7 @@
   <div class="license-box my-3">
     <div class="license-title">
       <div>编码算法</div>
-      <div>http://example.com/算法相关/编码算法/</div>
+      <div>https://maoxianck.github.io/算法相关/编码算法/</div>
     </div>
     <div class="license-meta">
       
