--- a/闲聊/为什么要写博客/index.html
+++ b/闲聊/为什么要写博客/index.html
@@ -19,7 +19,7 @@
     <meta name="description" content="为什么要写博客？为什么写博客，原因嘛，那是一开始看见别人有自己名字的网站，觉得有个自己的网站很酷，想着自己怎么也是计算机的捣鼓个玩玩，各种忙活之后就有了这儿。 写博客是个注重坚持的行为，这是一个锻炼自己的方式。 首先，我个人认为博客是写给自己的，其次，才是写给别人看的。具体的原因嘛，往下看呗~  强化知识。   “如果你不能把一件事情讲清楚，那么十有八九你并没有完全理解它”  博客是对自己知识的学">
 <meta property="og:type" content="article">
 <meta property="og:title" content="为什么要写博客">
-<meta property="og:url" content="http://example.com/%E9%97%B2%E8%81%8A/%E4%B8%BA%E4%BB%80%E4%B9%88%E8%A6%81%E5%86%99%E5%8D%9A%E5%AE%A2/index.html">
+<meta property="og:url" content="https://maoxianck.github.io/%E9%97%B2%E8%81%8A/%E4%B8%BA%E4%BB%80%E4%B9%88%E8%A6%81%E5%86%99%E5%8D%9A%E5%AE%A2/index.html">
 <meta property="og:site_name" content="毛线球上的喵星人">
 <meta property="og:description" content="为什么要写博客？为什么写博客，原因嘛，那是一开始看见别人有自己名字的网站，觉得有个自己的网站很酷，想着自己怎么也是计算机的捣鼓个玩玩，各种忙活之后就有了这儿。 写博客是个注重坚持的行为，这是一个锻炼自己的方式。 首先，我个人认为博客是写给自己的，其次，才是写给别人看的。具体的原因嘛，往下看呗~  强化知识。   “如果你不能把一件事情讲清楚，那么十有八九你并没有完全理解它”  博客是对自己知识的学">
 <meta property="og:locale" content="zh_CN">
@@ -68,7 +68,7 @@
   <script id="fluid-configs">
     var Fluid = window.Fluid || {};
     Fluid.ctx = Object.assign({}, Fluid.ctx)
-    var CONFIG = {"hostname":"example.com","root":"/","version":"1.9.4","typing":{"enable":true,"typeSpeed":80,"cursorChar":"_","loop":false,"scope":[]},"anchorjs":{"enable":true,"element":"h1,h2,h3,h4,h5,h6","placement":"left","visible":"hover","icon":""},"progressbar":{"enable":true,"height_px":3,"color":"#29d","options":{"showSpinner":false,"trickleSpeed":100}},"code_language":{"enable":true,"default":"TEXT"},"copy_btn":true,"image_caption":{"enable":true},"image_zoom":{"enable":true,"img_url_replace":["",""]},"toc":{"enable":true,"placement":"right","headingSelector":"h1,h2,h3,h4,h5,h6","collapseDepth":0},"lazyload":{"enable":true,"loading_img":"/img/loading.gif","onlypost":false,"offset_factor":2},"web_analytics":{"enable":false,"follow_dnt":true,"baidu":null,"google":null,"gtag":null,"tencent":{"sid":null,"cid":null},"woyaola":null,"cnzz":null,"leancloud":{"app_id":null,"app_key":null,"server_url":null,"path":"window.location.pathname","ignore_local":false}},"search_path":"/local-search.xml"};
+    var CONFIG = {"hostname":"maoxianck.github.io","root":"/","version":"1.9.4","typing":{"enable":true,"typeSpeed":80,"cursorChar":"_","loop":false,"scope":[]},"anchorjs":{"enable":true,"element":"h1,h2,h3,h4,h5,h6","placement":"left","visible":"hover","icon":""},"progressbar":{"enable":true,"height_px":3,"color":"#29d","options":{"showSpinner":false,"trickleSpeed":100}},"code_language":{"enable":true,"default":"TEXT"},"copy_btn":true,"image_caption":{"enable":true},"image_zoom":{"enable":true,"img_url_replace":["",""]},"toc":{"enable":true,"placement":"right","headingSelector":"h1,h2,h3,h4,h5,h6","collapseDepth":0},"lazyload":{"enable":true,"loading_img":"/img/loading.gif","onlypost":false,"offset_factor":2},"web_analytics":{"enable":false,"follow_dnt":true,"baidu":null,"google":null,"gtag":null,"tencent":{"sid":null,"cid":null},"woyaola":null,"cnzz":null,"leancloud":{"app_id":null,"app_key":null,"server_url":null,"path":"window.location.pathname","ignore_local":false}},"search_path":"/local-search.xml"};
 
     if (CONFIG.web_analytics.follow_dnt) {
       var dntVal = navigator.doNotTrack || window.doNotTrack || navigator.msDoNotTrack;
@@ -330,7 +330,7 @@
   <div class="license-box my-3">
     <div class="license-title">
       <div>为什么要写博客</div>
-      <div>http://example.com/闲聊/为什么要写博客/</div>
+      <div>https://maoxianck.github.io/闲聊/为什么要写博客/</div>
     </div>
     <div class="license-meta">
       
