--- a/uncategorized/好用的软件收集/index.html
+++ b/uncategorized/好用的软件收集/index.html
@@ -19,7 +19,7 @@
     <meta name="description" content="前言平时用到的软件很多，又杂，所以就整篇文章罗列出我自己平时用到的软件，由于本人的兴趣广泛，包括但不限于编程、作图、修图、摄影、写作、游戏、优化、美化等类型，或许也会包含一些有趣的我也不知道用来干什么的小程序或网站等。同时也作为重装系统之后的软件安装列表。 本文章非广告，仅为个人推荐 服务器篇 WordPress 本博客就是由WordPress驱动的，总的来说就是一个自动建立网站的开源软件。Wor">
 <meta property="og:type" content="article">
 <meta property="og:title" content="好用的软件收集">
-<meta property="og:url" content="http://example.com/uncategorized/%E5%A5%BD%E7%94%A8%E7%9A%84%E8%BD%AF%E4%BB%B6%E6%94%B6%E9%9B%86/index.html">
+<meta property="og:url" content="https://maoxianck.github.io/uncategorized/%E5%A5%BD%E7%94%A8%E7%9A%84%E8%BD%AF%E4%BB%B6%E6%94%B6%E9%9B%86/index.html">
 <meta property="og:site_name" content="毛线球上的喵星人">
 <meta property="og:description" content="前言平时用到的软件很多，又杂，所以就整篇文章罗列出我自己平时用到的软件，由于本人的兴趣广泛，包括但不限于编程、作图、修图、摄影、写作、游戏、优化、美化等类型，或许也会包含一些有趣的我也不知道用来干什么的小程序或网站等。同时也作为重装系统之后的软件安装列表。 本文章非广告，仅为个人推荐 服务器篇 WordPress 本博客就是由WordPress驱动的，总的来说就是一个自动建立网站的开源软件。Wor">
 <meta property="og:locale" content="zh_CN">
@@ -68,7 +68,7 @@
   <script id="fluid-configs">
     var Fluid = window.Fluid || {};
     Fluid.ctx = Object.assign({}, Fluid.ctx)
-    var CONFIG = {"hostname":"example.com","root":"/","version":"1.9.4","typing":{"enable":true,"typeSpeed":80,"cursorChar":"_","loop":false,"scope":[]},"anchorjs":{"enable":true,"element":"h1,h2,h3,h4,h5,h6","placement":"left","visible":"hover","icon":""},"progressbar":{"enable":true,"height_px":3,"color":"#29d","options":{"showSpinner":false,"trickleSpeed":100}},"code_language":{"enable":true,"default":"TEXT"},"copy_btn":true,"image_caption":{"enable":true},"image_zoom":{"enable":true,"img_url_replace":["",""]},"toc":{"enable":true,"placement":"right","headingSelector":"h1,h2,h3,h4,h5,h6","collapseDepth":0},"lazyload":{"enable":true,"loading_img":"/img/loading.gif","onlypost":false,"offset_factor":2},"web_analytics":{"enable":false,"follow_dnt":true,"baidu":null,"google":null,"gtag":null,"tencent":{"sid":null,"cid":null},"woyaola":null,"cnzz":null,"leancloud":{"app_id":null,"app_key":null,"server_url":null,"path":"window.location.pathname","ignore_local":false}},"search_path":"/local-search.xml"};
+    var CONFIG = {"hostname":"maoxianck.github.io","root":"/","version":"1.9.4","typing":{"enable":true,"typeSpeed":80,"cursorChar":"_","loop":false,"scope":[]},"anchorjs":{"enable":true,"element":"h1,h2,h3,h4,h5,h6","placement":"left","visible":"hover","icon":""},"progressbar":{"enable":true,"height_px":3,"color":"#29d","options":{"showSpinner":false,"trickleSpeed":100}},"code_language":{"enable":true,"default":"TEXT"},"copy_btn":true,"image_caption":{"enable":true},"image_zoom":{"enable":true,"img_url_replace":["",""]},"toc":{"enable":true,"placement":"right","headingSelector":"h1,h2,h3,h4,h5,h6","collapseDepth":0},"lazyload":{"enable":true,"loading_img":"/img/loading.gif","onlypost":false,"offset_factor":2},"web_analytics":{"enable":false,"follow_dnt":true,"baidu":null,"google":null,"gtag":null,"tencent":{"sid":null,"cid":null},"woyaola":null,"cnzz":null,"leancloud":{"app_id":null,"app_key":null,"server_url":null,"path":"window.location.pathname","ignore_local":false}},"search_path":"/local-search.xml"};
 
     if (CONFIG.web_analytics.follow_dnt) {
       var dntVal = navigator.doNotTrack || window.doNotTrack || navigator.msDoNotTrack;
@@ -360,7 +360,7 @@
   <div class="license-box my-3">
     <div class="license-title">
       <div>好用的软件收集</div>
-      <div>http://example.com/uncategorized/好用的软件收集/</div>
+      <div>https://maoxianck.github.io/uncategorized/好用的软件收集/</div>
     </div>
     <div class="license-meta">
       
