--- a/数据结构-算法/闲聊/关于数据结构的一些想法/index.html
+++ b/数据结构-算法/闲聊/关于数据结构的一些想法/index.html
@@ -19,7 +19,7 @@
     <meta name="description" content="前言写这篇文章的动机呢，其实是洗澡的时候突然想到，并结合平时中的一些感受所产生的：大多数学数据结构的人，总是给我一种为了学数据结构而学的感觉。 问题数据结构和算法，这两个好兄弟不论是在本科的课程里还是在面试中，都是最基础的考察项目。但是大多数人，在刚刚入门的时候，比如刚学习完一门语言的语法，准备深入学习的时候，就会有人告诉说：该学数据结构了。然后从天而降一个链表让你学，学会了用就完事了，迷迷糊糊学">
 <meta property="og:type" content="article">
 <meta property="og:title" content="关于数据结构的一些想法">
-<meta property="og:url" content="http://example.com/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84-%E7%AE%97%E6%B3%95/%E9%97%B2%E8%81%8A/%E5%85%B3%E4%BA%8E%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E7%9A%84%E4%B8%80%E4%BA%9B%E6%83%B3%E6%B3%95/index.html">
+<meta property="og:url" content="https://maoxianck.github.io/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84-%E7%AE%97%E6%B3%95/%E9%97%B2%E8%81%8A/%E5%85%B3%E4%BA%8E%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E7%9A%84%E4%B8%80%E4%BA%9B%E6%83%B3%E6%B3%95/index.html">
 <meta property="og:site_name" content="毛线球上的喵星人">
 <meta property="og:description" content="前言写这篇文章的动机呢，其实是洗澡的时候突然想到，并结合平时中的一些感受所产生的：大多数学数据结构的人，总是给我一种为了学数据结构而学的感觉。 问题数据结构和算法，这两个好兄弟不论是在本科的课程里还是在面试中，都是最基础的考察项目。但是大多数人，在刚刚入门的时候，比如刚学习完一门语言的语法，准备深入学习的时候，就会有人告诉说：该学数据结构了。然后从天而降一个链表让你学，学会了用就完事了，迷迷糊糊学">
 <meta property="og:locale" content="zh_CN">
@@ -71,7 +71,7 @@
   <script id="fluid-configs">
     var Fluid = window.Fluid || {};
     Fluid.ctx = Object.assign({}, Fluid.ctx)
-    var CONFIG = {"hostname":"example.com","root":"/","version":"1.9.4","typing":{"enable":true,"typeSpeed":80,"cursorChar":"_","loop":false,"scope":[]},"anchorjs":{"enable":true,"element":"h1,h2,h3,h4,h5,h6","placement":"left","visible":"hover","icon":""},"progressbar":{"enable":true,"height_px":3,"color":"#29d","options":{"showSpinner":false,"trickleSpeed":100}},"code_language":{"enable":true,"default":"TEXT"},"copy_btn":true,"image_caption":{"enable":true},"image_zoom":{"enable":true,"img_url_replace":["",""]},"toc":{"enable":true,"placement":"right","headingSelector":"h1,h2,h3,h4,h5,h6","collapseDepth":0},"lazyload":{"enable":true,"loading_img":"/img/loading.gif","onlypost":false,"offset_factor":2},"web_analytics":{"enable":false,"follow_dnt":true,"baidu":null,"google":null,"gtag":null,"tencent":{"sid":null,"cid":null},"woyaola":null,"cnzz":null,"leancloud":{"app_id":null,"app_key":null,"server_url":null,"path":"window.location.pathname","ignore_local":false}},"search_path":"/local-search.xml"};
+    var CONFIG = {"hostname":"maoxianck.github.io","root":"/","version":"1.9.4","typing":{"enable":true,"typeSpeed":80,"cursorChar":"_","loop":false,"scope":[]},"anchorjs":{"enable":true,"element":"h1,h2,h3,h4,h5,h6","placement":"left","visible":"hover","icon":""},"progressbar":{"enable":true,"height_px":3,"color":"#29d","options":{"showSpinner":false,"trickleSpeed":100}},"code_language":{"enable":true,"default":"TEXT"},"copy_btn":true,"image_caption":{"enable":true},"image_zoom":{"enable":true,"img_url_replace":["",""]},"toc":{"enable":true,"placement":"right","headingSelector":"h1,h2,h3,h4,h5,h6","collapseDepth":0},"lazyload":{"enable":true,"loading_img":"/img/loading.gif","onlypost":false,"offset_factor":2},"web_analytics":{"enable":false,"follow_dnt":true,"baidu":null,"google":null,"gtag":null,"tencent":{"sid":null,"cid":null},"woyaola":null,"cnzz":null,"leancloud":{"app_id":null,"app_key":null,"server_url":null,"path":"window.location.pathname","ignore_local":false}},"search_path":"/local-search.xml"};
 
     if (CONFIG.web_analytics.follow_dnt) {
       var dntVal = navigator.doNotTrack || window.doNotTrack || navigator.msDoNotTrack;
@@ -338,7 +338,7 @@
   <div class="license-box my-3">
     <div class="license-title">
       <div>关于数据结构的一些想法</div>
-      <div>http://example.com/数据结构-算法/闲聊/关于数据结构的一些想法/</div>
+      <div>https://maoxianck.github.io/数据结构-算法/闲聊/关于数据结构的一些想法/</div>
     </div>
     <div class="license-meta">
       
