--- a/程序/C/c-中的、-、-、-、、-和as/index.html
+++ b/程序/C/c-中的、-、-、-、、-和as/index.html
@@ -19,7 +19,7 @@
     <meta name="description" content="(?) 可空类型通常来说，编程语言中一般对于数据的引用类型分为值类型和引用类型。例如bool、int等为值类型，而类一般为引用类型。值类型即存储的是数值，引用存储的是对数值地址的引用。从而引用类型可以为空（null），值类型不可为空，使用前未初始化则会出现警告或被默认初始化为该类型的默认值。 (?)符号的作用即修饰值类型，使其可空（可为null）。 举个例子： 12int a &#x3D; null; &#x2F;&#x2F;">
 <meta property="og:type" content="article">
 <meta property="og:title" content="C# 中的、 、.、[]、、&#x3D;和as">
-<meta property="og:url" content="http://example.com/%E7%A8%8B%E5%BA%8F/C/c-%E4%B8%AD%E7%9A%84%E3%80%81-%E3%80%81-%E3%80%81-%E3%80%81%E3%80%81-%E5%92%8Cas/index.html">
+<meta property="og:url" content="https://maoxianck.github.io/%E7%A8%8B%E5%BA%8F/C/c-%E4%B8%AD%E7%9A%84%E3%80%81-%E3%80%81-%E3%80%81-%E3%80%81%E3%80%81-%E5%92%8Cas/index.html">
 <meta property="og:site_name" content="毛线球上的喵星人">
 <meta property="og:description" content="(?) 可空类型通常来说，编程语言中一般对于数据的引用类型分为值类型和引用类型。例如bool、int等为值类型，而类一般为引用类型。值类型即存储的是数值，引用存储的是对数值地址的引用。从而引用类型可以为空（null），值类型不可为空，使用前未初始化则会出现警告或被默认初始化为该类型的默认值。 (?)符号的作用即修饰值类型，使其可空（可为null）。 举个例子： 12int a &#x3D; null; &#x2F;&#x2F;">
 <meta property="og:locale" content="zh_CN">
@@ -68,7 +68,7 @@
   <script id="fluid-configs">
     var Fluid = window.Fluid || {};
     Fluid.ctx = Object.assign({}, Fluid.ctx)
-    var CONFIG = {"hostname":"example.com","root":"/","version":"1.9.4","typing":{"enable":true,"typeSpeed":80,"cursorChar":"_","loop":false,"scope":[]},"anchorjs":{"enable":true,"element":"h1,h2,h3,h4,h5,h6","placement":"left","visible":"hover","icon":""},"progressbar":{"enable":true,"height_px":3,"color":"#29d","options":{"showSpinner":false,"trickleSpeed":100}},"code_language":{"enable":true,"default":"TEXT"},"copy_btn":true,"image_caption":{"enable":true},"image_zoom":{"enable":true,"img_url_replace":["",""]},"toc":{"enable":true,"placement":"right","headingSelector":"h1,h2,h3,h4,h5,h6","collapseDepth":0},"lazyload":{"enable":true,"loading_img":"/img/loading.gif","onlypost":false,"offset_factor":2},"web_analytics":{"enable":false,"follow_dnt":true,"baidu":null,"google":null,"gtag":null,"tencent":{"sid":null,"cid":null},"woyaola":null,"cnzz":null,"leancloud":{"app_id":null,"app_key":null,"server_url":null,"path":"window.location.pathname","ignore_local":false}},"search_path":"/local-search.xml"};
+    var CONFIG = {"hostname":"maoxianck.github.io","root":"/","version":"1.9.4","typing":{"enable":true,"typeSpeed":80,"cursorChar":"_","loop":false,"scope":[]},"anchorjs":{"enable":true,"element":"h1,h2,h3,h4,h5,h6","placement":"left","visible":"hover","icon":""},"progressbar":{"enable":true,"height_px":3,"color":"#29d","options":{"showSpinner":false,"trickleSpeed":100}},"code_language":{"enable":true,"default":"TEXT"},"copy_btn":true,"image_caption":{"enable":true},"image_zoom":{"enable":true,"img_url_replace":["",""]},"toc":{"enable":true,"placement":"right","headingSelector":"h1,h2,h3,h4,h5,h6","collapseDepth":0},"lazyload":{"enable":true,"loading_img":"/img/loading.gif","onlypost":false,"offset_factor":2},"web_analytics":{"enable":false,"follow_dnt":true,"baidu":null,"google":null,"gtag":null,"tencent":{"sid":null,"cid":null},"woyaola":null,"cnzz":null,"leancloud":{"app_id":null,"app_key":null,"server_url":null,"path":"window.location.pathname","ignore_local":false}},"search_path":"/local-search.xml"};
 
     if (CONFIG.web_analytics.follow_dnt) {
       var dntVal = navigator.doNotTrack || window.doNotTrack || navigator.msDoNotTrack;
@@ -358,7 +358,7 @@
   <div class="license-box my-3">
     <div class="license-title">
       <div>C# 中的、 、.、[]、、=和as</div>
-      <div>http://example.com/程序/C/c-中的、-、-、-、、-和as/</div>
+      <div>https://maoxianck.github.io/程序/C/c-中的、-、-、-、、-和as/</div>
     </div>
     <div class="license-meta">
       
