--- a/程序/Sql/sql根据不同的条件查询count/index.html
+++ b/程序/Sql/sql根据不同的条件查询count/index.html
@@ -19,7 +19,7 @@
     <meta name="description" content="在一条语句中根据不同的条件count对应的数据。 1select count(if(条件, true, null)), count(if(条件, true, null)) from table;  以上语句可以根据两个不同的条件一次计算出对应的count值，很明显的用到的是IF函数。IF( expr1, expr2, expr3)。  以下来自官方文档的说明 If expr1 is TRUE (e">
 <meta property="og:type" content="article">
 <meta property="og:title" content="SQL根据不同的条件查询count">
-<meta property="og:url" content="http://example.com/%E7%A8%8B%E5%BA%8F/Sql/sql%E6%A0%B9%E6%8D%AE%E4%B8%8D%E5%90%8C%E7%9A%84%E6%9D%A1%E4%BB%B6%E6%9F%A5%E8%AF%A2count/index.html">
+<meta property="og:url" content="https://maoxianck.github.io/%E7%A8%8B%E5%BA%8F/Sql/sql%E6%A0%B9%E6%8D%AE%E4%B8%8D%E5%90%8C%E7%9A%84%E6%9D%A1%E4%BB%B6%E6%9F%A5%E8%AF%A2count/index.html">
 <meta property="og:site_name" content="毛线球上的喵星人">
 <meta property="og:description" content="在一条语句中根据不同的条件count对应的数据。 1select count(if(条件, true, null)), count(if(条件, true, null)) from table;  以上语句可以根据两个不同的条件一次计算出对应的count值，很明显的用到的是IF函数。IF( expr1, expr2, expr3)。  以下来自官方文档的说明 If expr1 is TRUE (e">
 <meta property="og:locale" content="zh_CN">
@@ -71,7 +71,7 @@
   <script id="fluid-configs">
     var Fluid = window.Fluid || {};
     Fluid.ctx = Object.assign({}, Fluid.ctx)
-    var CONFIG = {"hostname":"example.com","root":"/","version":"1.9.4","typing":{"enable":true,"typeSpeed":80,"cursorChar":"_","loop":false,"scope":[]},"anchorjs":{"enable":true,"element":"h1,h2,h3,h4,h5,h6","placement":"left","visible":"hover","icon":""},"progressbar":{"enable":true,"height_px":3,"color":"#29d","options":{"showSpinner":false,"trickleSpeed":100}},"code_language":{"enable":true,"default":"TEXT"},"copy_btn":true,"image_caption":{"enable":true},"image_zoom":{"enable":true,"img_url_replace":["",""]},"toc":{"enable":true,"placement":"right","headingSelector":"h1,h2,h3,h4,h5,h6","collapseDepth":0},"lazyload":{"enable":true,"loading_img":"/img/loading.gif","onlypost":false,"offset_factor":2},"web_analytics":{"enable":false,"follow_dnt":true,"baidu":null,"google":null,"gtag":null,"tencent":{"sid":null,"cid":null},"woyaola":null,"cnzz":null,"leancloud":{"app_id":null,"app_key":null,"server_url":null,"path":"window.location.pathname","ignore_local":false}},"search_path":"/local-search.xml"};
+    var CONFIG = {"hostname":"maoxianck.github.io","root":"/","version":"1.9.4","typing":{"enable":true,"typeSpeed":80,"cursorChar":"_","loop":false,"scope":[]},"anchorjs":{"enable":true,"element":"h1,h2,h3,h4,h5,h6","placement":"left","visible":"hover","icon":""},"progressbar":{"enable":true,"height_px":3,"color":"#29d","options":{"showSpinner":false,"trickleSpeed":100}},"code_language":{"enable":true,"default":"TEXT"},"copy_btn":true,"image_caption":{"enable":true},"image_zoom":{"enable":true,"img_url_replace":["",""]},"toc":{"enable":true,"placement":"right","headingSelector":"h1,h2,h3,h4,h5,h6","collapseDepth":0},"lazyload":{"enable":true,"loading_img":"/img/loading.gif","onlypost":false,"offset_factor":2},"web_analytics":{"enable":false,"follow_dnt":true,"baidu":null,"google":null,"gtag":null,"tencent":{"sid":null,"cid":null},"woyaola":null,"cnzz":null,"leancloud":{"app_id":null,"app_key":null,"server_url":null,"path":"window.location.pathname","ignore_local":false}},"search_path":"/local-search.xml"};
 
     if (CONFIG.web_analytics.follow_dnt) {
       var dntVal = navigator.doNotTrack || window.doNotTrack || navigator.msDoNotTrack;
@@ -347,7 +347,7 @@
   <div class="license-box my-3">
     <div class="license-title">
       <div>SQL根据不同的条件查询count</div>
-      <div>http://example.com/程序/Sql/sql根据不同的条件查询count/</div>
+      <div>https://maoxianck.github.io/程序/Sql/sql根据不同的条件查询count/</div>
     </div>
     <div class="license-meta">
       
