--- a/程序/基于像素识别的连连看辅助/index.html
+++ b/程序/基于像素识别的连连看辅助/index.html
@@ -19,7 +19,7 @@
     <meta name="description" content="这个算是除了课程设计之外我的第一个小工具，这里重点分析一下思路，有基础的读者应该可以通过参考本文章写出自己的程序。 注:此文章仅用于学习参考 一、 需要的知识： C++基础 WinAPI的使用  二、 程序实现原理步骤： 获取游戏及图片信息 分析图片及定位将其转化为矩阵(二维数组) 通过BFS算法计算消除顺序 发送对应鼠标信息进行消除。  三、 分步说明1. 使用的结构体与参数说明：1234567">
 <meta property="og:type" content="article">
 <meta property="og:title" content="基于像素识别的连连看辅助">
-<meta property="og:url" content="http://example.com/%E7%A8%8B%E5%BA%8F/%E5%9F%BA%E4%BA%8E%E5%83%8F%E7%B4%A0%E8%AF%86%E5%88%AB%E7%9A%84%E8%BF%9E%E8%BF%9E%E7%9C%8B%E8%BE%85%E5%8A%A9/index.html">
+<meta property="og:url" content="https://maoxianck.github.io/%E7%A8%8B%E5%BA%8F/%E5%9F%BA%E4%BA%8E%E5%83%8F%E7%B4%A0%E8%AF%86%E5%88%AB%E7%9A%84%E8%BF%9E%E8%BF%9E%E7%9C%8B%E8%BE%85%E5%8A%A9/index.html">
 <meta property="og:site_name" content="毛线球上的喵星人">
 <meta property="og:description" content="这个算是除了课程设计之外我的第一个小工具，这里重点分析一下思路，有基础的读者应该可以通过参考本文章写出自己的程序。 注:此文章仅用于学习参考 一、 需要的知识： C++基础 WinAPI的使用  二、 程序实现原理步骤： 获取游戏及图片信息 分析图片及定位将其转化为矩阵(二维数组) 通过BFS算法计算消除顺序 发送对应鼠标信息进行消除。  三、 分步说明1. 使用的结构体与参数说明：1234567">
 <meta property="og:locale" content="zh_CN">
@@ -71,7 +71,7 @@
   <script id="fluid-configs">
     var Fluid = window.Fluid || {};
     Fluid.ctx = Object.assign({}, Fluid.ctx)
-    var CONFIG = {"hostname":"example.com","root":"/","version":"1.9.4","typing":{"enable":true,"typeSpeed":80,"cursorChar":"_","loop":false,"scope":[]},"anchorjs":{"enable":true,"element":"h1,h2,h3,h4,h5,h6","placement":"left","visible":"hover","icon":""},"progressbar":{"enable":true,"height_px":3,"color":"#29d","options":{"showSpinner":false,"trickleSpeed":100}},"code_language":{"enable":true,"default":"TEXT"},"copy_btn":true,"image_caption":{"enable":true},"image_zoom":{"enable":true,"img_url_replace":["",""]},"toc":{"enable":true,"placement":"right","headingSelector":"h1,h2,h3,h4,h5,h6","collapseDepth":0},"lazyload":{"enable":true,"loading_img":"/img/loading.gif","onlypost":false,"offset_factor":2},"web_analytics":{"enable":false,"follow_dnt":true,"baidu":null,"google":null,"gtag":null,"tencent":{"sid":null,"cid":null},"woyaola":null,"cnzz":null,"leancloud":{"app_id":null,"app_key":null,"server_url":null,"path":"window.location.pathname","ignore_local":false}},"search_path":"/local-search.xml"};
+    var CONFIG = {"hostname":"maoxianck.github.io","root":"/","version":"1.9.4","typing":{"enable":true,"typeSpeed":80,"cursorChar":"_","loop":false,"scope":[]},"anchorjs":{"enable":true,"element":"h1,h2,h3,h4,h5,h6","placement":"left","visible":"hover","icon":""},"progressbar":{"enable":true,"height_px":3,"color":"#29d","options":{"showSpinner":false,"trickleSpeed":100}},"code_language":{"enable":true,"default":"TEXT"},"copy_btn":true,"image_caption":{"enable":true},"image_zoom":{"enable":true,"img_url_replace":["",""]},"toc":{"enable":true,"placement":"right","headingSelector":"h1,h2,h3,h4,h5,h6","collapseDepth":0},"lazyload":{"enable":true,"loading_img":"/img/loading.gif","onlypost":false,"offset_factor":2},"web_analytics":{"enable":false,"follow_dnt":true,"baidu":null,"google":null,"gtag":null,"tencent":{"sid":null,"cid":null},"woyaola":null,"cnzz":null,"leancloud":{"app_id":null,"app_key":null,"server_url":null,"path":"window.location.pathname","ignore_local":false}},"search_path":"/local-search.xml"};
 
     if (CONFIG.web_analytics.follow_dnt) {
       var dntVal = navigator.doNotTrack || window.doNotTrack || navigator.msDoNotTrack;
@@ -384,7 +384,7 @@
   <div class="license-box my-3">
     <div class="license-title">
       <div>基于像素识别的连连看辅助</div>
-      <div>http://example.com/程序/基于像素识别的连连看辅助/</div>
+      <div>https://maoxianck.github.io/程序/基于像素识别的连连看辅助/</div>
     </div>
     <div class="license-meta">
       
