deploy: 991016a58084343229a56f1309fb3fe02c4ae7ed

--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
       
       <a class="index-excerpt index-excerpt__noimg" href="/%E7%A8%8B%E5%BA%8F/Web/vue%E9%A1%B9%E7%9B%AE%E5%9C%A8nginx%E9%9D%9Eroot%E7%9B%AE%E5%BD%95%E4%B8%8B%E9%83%A8%E7%BD%B2%E7%9A%84%E9%97%AE%E9%A2%98/" target="_self">
         <div>
-          错误排查最近在部署Vue项目时，出现如下错误：  一开始以为是常见的无限路由导致的爆栈这类基础问题，但是考虑到在本地调试时一切正常，并且在本次版本更新前生产环境也正常运行。于是直接被整懵，一度怀疑是更新了依赖包版本导致的问题。在尝试了调整路由配置、依赖包版本回退、项目回退均无果后，换了台服务器进行部署测试，结果正常运行。 比较后发现，在项目部署的原服务器上，还运行着一个用户端项目，路径如下： 12
+          错误排查最近在部署Vue项目时，出现如下错误：   一开始以为是常见的无限路由导致的爆栈这类基础问题，但是考虑到在本地调试时一切正常，并且在本次版本更新前生产环境也正常运行。于是直接被整懵，一度怀疑是更新了依赖包版本导致的问题。在尝试了调整路由配置、依赖包版本回退、项目回退均无果后，换了台服务器进行部署测试，结果正常运行。 比较后发现，在项目部署的原服务器上，还运行着一个用户端项目，路径如下： 1
         </div>
       </a>
 
@@ -794,7 +794,7 @@
       
       <a class="index-excerpt index-excerpt__noimg" href="/%E7%A8%8B%E5%BA%8F/svn%E7%9A%84%E4%BD%BF%E7%94%A8%E5%8F%8A%E4%BB%A3%E7%A0%81%E5%90%88%E5%B9%B6/" target="_self">
         <div>
-          客户端使用下载地址在此 安装过程省略。 安装后，软件默认设置为英文，有需要可以右键任意位置，打开下拉菜单中svn里setting选项，将语言设置为中文，但是建议使用英文。 安装后，在需要作为代码仓库的目录下建立一个文件夹，右键该文件夹，选择SVN Checkout 选项。  Url中填写的是svn的仓库地址，可以在自己的服务器上搭建Svn仓库，一般填写由仓库管理员给定的仓库地址 directory
+          客户端使用下载地址在此 安装过程省略。 安装后，软件默认设置为英文，有需要可以右键任意位置，打开下拉菜单中svn里setting选项，将语言设置为中文，但是建议使用英文。 安装后，在需要作为代码仓库的目录下建立一个文件夹，右键该文件夹，选择SVN Checkout 选项。   Url中填写的是svn的仓库地址，可以在自己的服务器上搭建Svn仓库，一般填写由仓库管理员给定的仓库地址 director
         </div>
       </a>
 
